Objektmethode zum Formatieren von Zeichenketten verwenden