@@ -3,6 +3,6 @@ package logicsimulator.core;
 public record Point(int x, int y) {
     @Override
     public String toString() {
-        return String.format("[%d, %d]", x, y);
+        return "[%d, %d]".formatted(x, y);
     }
 }
